# MWPC

./: .gitignore  CMakeLists.txt  LICENSE  README.md  environment.yml
data/gas/1atm/: Ar_75_iC4H10_25.gas  Ar_90_CO2_10.gas
gas/1atm/: Ar_70_CO2_30.gas  Ar_80_CO2_20.gas
gas/2atm/: Ar_70_CO2_30.gas  Ar_75_iC4H10_25.gas  Ar_80_CO2_20.gas  Ar_90_CO2_10.gas
gas/3atm/: Ar_70_CO2_30.gas  Ar_75_iC4H10_25.gas  Ar_80_CO2_20.gas  Ar_90_CO2_10.gas
include/: WirePlane.hpp  neBEMWires.hpp  wires.hpp
src/: CMakeLists.txt  WirePlane.cpp  field.cpp  fluctuations.cpp  gasfile.cpp  mwpc.cpp  signal.cpp
